# api/public/docs/openapi.yaml
@@ -23,7 +23,7 @@ security:
   -
     default: []
 paths:
-  /api/login:
+  /api/v1/login:
     post:
       summary: 'Login and get token'
       operationId: loginAndGetToken
@@ -83,7 +83,7 @@ paths:
               required:
                 - email
                 - password
-  /api/logout:
+  /api/v1/logout:
     post:
       summary: 'Logout (revoke token)'
       operationId: logoutrevokeToken
@@ -111,7 +111,7 @@ paths:
                     example: 'Logged out'
       tags:
         - Authentication
-  /api/dots:
+  /api/v1/dots:
     get:
       summary: 'List DOTs'
       operationId: listDOTs
@@ -346,7 +346,7 @@ paths:
                   description: 'Must not be greater than 64 characters.'
                   example: gefbeilfzsyuxoezbdtab
                   nullable: false
-  '/api/dots/{dotnumber}':
+  '/api/v1/dots/{dotnumber}':
     get:
       summary: 'Show DOT detail'
       operationId: showDOTDetail
@@ -411,7 +411,7 @@ paths:
         required: true
         schema:
           type: integer
-  '/api/kargho/onboard-from-fmcsa/{dotnumber}':
+  '/api/v1/kargho/onboard-from-fmcsa/{dotnumber}':
     post:
       summary: 'Onboard a DOT from FMCSA into KarghoUS'
       operationId: onboardADOTFromFMCSAIntoKarghoUS
